--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <meta charset="UTF-8">
-		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
+		<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 		<title>Eat Dat Burger</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
 		<script src="/assets/js/burger.js"></script>
