--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,16 +4,18 @@
 </div>
 
 <ul>
-    {{#each burger}}
-    {{#unless devoured}}
-    {{/unless}}
+    {{#each burgers}}
+      {{#unless this.devoured}}
+      <li>{{this.burger_name}}</li>
+      {{/unless}}
     {{/each}}
 </ul>
 
 <ul>
-    {{#each burger}}
-    {{#if devoured}}
-    {{/if}}
+    {{#each burgers}}
+      {{#if this.devoured}}
+      <li>{{this.burger_name}}</li>
+      {{/if}}
     {{/each}}
 </ul>
 
@@ -22,8 +24,8 @@
 
     <div class="form-group">
         <label for="burger">Burger Name:</label>
-        <input type="text" id="burger" name="name">
+        <input type="text" id="burg" name="name">
     </div>
-
+    <br>
     <button type="submit">Add a Burger</button>
 </form>
