--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6,3 +6,15 @@ body {
     text-align: center;
 }
 
+.left {
+    float: left;
+}
+
+.right {
+    float: right;
+}
+
+.add {
+    clear: both;
+}
+
